fixing comment input on mobile

--- a/src/components/ServiceComments/ServiceComments.css
+++ b/src/components/ServiceComments/ServiceComments.css
@@ -268,7 +268,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 50px;
+        height: 55px;
         max-width: 320px;
     }
 
@@ -281,12 +281,12 @@
 
     .comment-input {
         text-align: center;
-        height: 30px;
+        height: 32px;
         border-top-left-radius: 4px;
         border-bottom-left-radius: 4px;
         margin-top: 3px;
         width: 280px;
-        margin-left: 9px;
+        margin-left: 10px;
         font-size: 14px;
     }
 
